Fix span height in FF, and set number keyboard for input fields on mobile devices

--- a/css/general.css
+++ b/css/general.css
@@ -57,3 +57,12 @@ input.form__input-elm--read-only {
 	display: inline-block;
 	background-color: #808080;
 }
+
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {-moz-appearance: textfield;}
